fix: use max-width to avoid scrolling on smaller screens

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
 }
 
 .max-width-wrapper {
-  width: 800px;
+  max-width: 800px;
   margin-left: auto;
   margin-right: auto;
 }
